# dnf-ui

./: .gitignore  Makefile  README.md  REVIEW.md  dnf-ui.spec  meson.build
docker/: Dockerfile  docker_build.sh  docker_dnf5daemon_test.sh  docker_dnf5daemon_test_inner.sh  docker_gdb.sh  docker_gdb_inner.sh  docker_gdb_stop.sh  docker_gui_service_run_inner.sh  docker_login.sh  docker_memcheck.sh  docker_offline_test.sh  docker_rpm_build.sh  docker_service_apply_test.sh  docker_service_cancel_test.sh  docker_service_preview_failure_test.sh  docker_service_system_bus_apply_test.sh  docker_service_system_bus_disconnect_test.sh  docker_service_system_bus_inner.sh  docker_service_system_bus_test.sh  docker_service_test.sh  docker_test.sh
packaging/: build_rpm.sh  build_srpm.sh  com.fedora.Dnfui.Transaction1.conf  com.fedora.dnfui.desktop.in  com.fedora.dnfui.metainfo.xml.in  com.fedora.dnfui.policy  io.github.dnfui.dnfui.desktop.in  io.github.dnfui.dnfui.metainfo.xml.in  meson.build
src/: app.cpp  base_manager.cpp  base_manager.hpp  config.cpp  meson.build  transaction_request.hpp  transaction_service_client.cpp  transaction_service_client.hpp  transaction_service_client_dbus.cpp  transaction_service_client_internal.hpp  transaction_service_client_wait.cpp
src/dnf5daemon_client/: transaction_service_client.cpp  transaction_service_client.hpp  transaction_service_client_dbus.cpp  transaction_service_client_internal.hpp  transaction_service_client_wait.cpp
src/dnf_backend/: base_manager.cpp  base_manager.hpp  dnf_backend.hpp  dnf_common.cpp  dnf_details.cpp  dnf_history.cpp  dnf_internal.hpp  dnf_query.cpp  dnf_state.cpp  dnf_transaction.cpp  dnf_transaction_callbacks.cpp  dnf_transaction_format.cpp  dnf_transaction_internal.hpp
src/service/: meson.build  transaction_service.cpp  transaction_service_authorization.cpp  transaction_service_format.cpp  transaction_service_internal.hpp  transaction_service_limits.cpp  transaction_service_main.cpp  transaction_service_manager.cpp  transaction_service_preview_authorization.cpp  transaction_service_request_objects.cpp  transaction_service_signals.cpp  transaction_service_validation.cpp  transaction_service_workers.cpp
src/ui/: main_menu.cpp  main_window.cpp  main_window.hpp  main_window_layout.cpp  main_window_layout.hpp  package_action_rows.cpp  package_action_rows.hpp  package_info_controller.cpp  package_info_controller.hpp  package_query_cache.cpp  package_query_cache.hpp  package_query_controller.cpp  package_query_controller_internal.hpp  package_query_controls.cpp  package_query_state.hpp  package_query_tasks.cpp  package_table_columns.cpp  package_table_columns.hpp  package_table_context_menu.cpp  package_table_model.cpp  package_table_sort.cpp  package_table_status.cpp  package_table_status.hpp  package_table_view.cpp  package_table_view.hpp  package_table_view_internal.hpp  pending_transaction_apply.cpp  pending_transaction_apply.hpp  pending_transaction_controller.cpp  pending_transaction_controller.hpp  pending_transaction_request.cpp  pending_transaction_request.hpp  pending_transaction_state.hpp  pending_transaction_view.cpp  pending_transaction_view.hpp  repository_refresh_controller.cpp  repository_refresh_controller.hpp  transaction_progress.cpp  transaction_progress.hpp  transaction_review_dialog.cpp  (+6 more)
src/ui/common/: ui_helpers.cpp  ui_helpers.hpp  widgets.cpp  widgets.hpp  widgets_internal.hpp
src/ui/details/: package_details_controller.cpp  package_details_controller.hpp  package_info_controller.cpp  package_info_controller.hpp
src/ui/history/: transaction_history_view.cpp  transaction_history_view.hpp
src/ui/package_query/: package_query_cache.cpp  package_query_cache.hpp  package_query_controller.cpp  package_query_controller.hpp  package_query_controller_internal.hpp  package_query_controls.cpp  package_query_state.hpp  package_query_tasks.cpp
src/ui/package_table/: package_table_columns.cpp  package_table_columns.hpp  package_table_context_menu.cpp  package_table_context_menu.hpp  package_table_export.cpp  package_table_export.hpp  package_table_export_csv.cpp  package_table_export_csv.hpp  package_table_model.cpp  package_table_sort.cpp  package_table_status.cpp  package_table_status.hpp  package_table_view.cpp  package_table_view.hpp  package_table_view_internal.hpp
src/ui/refresh/: repository_refresh_controller.cpp  repository_refresh_controller.hpp
src/ui/transaction/: package_action_rows.cpp  package_action_rows.hpp  pending_transaction_action_rows.cpp  pending_transaction_action_rows.hpp  pending_transaction_apply.cpp  pending_transaction_apply.hpp  pending_transaction_controller.cpp  pending_transaction_controller.hpp  pending_transaction_request.cpp  pending_transaction_request.hpp  pending_transaction_state.hpp  pending_transaction_view.cpp  pending_transaction_view.hpp  transaction_dialogs.cpp  transaction_dialogs.hpp  transaction_progress.cpp  transaction_progress.hpp  transaction_review_dialog.cpp  transaction_review_dialog.hpp
src/ui/window/: main_menu.cpp  main_menu.hpp  main_window.cpp  main_window.hpp  main_window_layout.cpp  main_window_layout.hpp
src/upgrade/: daemon_upgrade_state.cpp  daemon_upgrade_state.hpp
test/: meson.build  transaction_service_system_bus_client.cpp
test/functional/: test_transaction_service_apply.sh  test_transaction_service_cancel.sh  test_transaction_service_preview.sh  test_transaction_service_preview_failure.sh  test_transaction_service_system_bus.sh
test/unit/: test_backend.cpp  test_config.cpp  test_daemon_upgrade_state.cpp  test_dnf5daemon_client.cpp  test_offline.cpp  test_package_action_rows.cpp  test_package_query_cache.cpp  test_package_table_export.cpp  test_package_table_sort.cpp  test_package_table_status.cpp  test_pending_transaction_action_rows.cpp  test_pending_transaction_request.cpp  test_search.cpp  test_transaction_history.cpp  test_transaction_preview.cpp  test_transaction_request.cpp  test_transaction_service_client.cpp  test_transaction_service_request_parser.cpp  test_transaction_service_validation.cpp  test_utils.hpp
(+28 files in other folders)
