backend_sources = files(
  'dnf_backend/base_manager.cpp',
  'dnf_backend/dnf_common.cpp',
  'dnf_backend/dnf_details.cpp',
  'dnf_backend/dnf_history.cpp',
  'dnf_backend/dnf_query.cpp',
  'dnf_backend/dnf_state.cpp',
)

app_sources = files(
  'app.cpp',
  'config.cpp',
  'i18n.cpp',
  'ui/window/main_menu.cpp',
  'ui/window/main_window.cpp',
  'ui/window/main_window_layout.cpp',
  'main.cpp',
  'ui/history/transaction_history_view.cpp',
  'ui/transaction/pending_transaction_action_rows.cpp',
  'ui/details/package_details_controller.cpp',
  'ui/package_query/package_query_cache.cpp',
  'ui/package_query/package_query_controls.cpp',
  'ui/package_query/package_query_controller.cpp',
  'ui/package_query/package_query_tasks.cpp',
  'ui/package_table/package_table_model.cpp',
  'ui/package_table/package_table_context_menu.cpp',
  'ui/package_table/package_table_columns.cpp',
  'ui/package_table/package_table_export.cpp',
  'ui/package_table/package_table_export_csv.cpp',
  'ui/package_table/package_table_sort.cpp',
  'ui/package_table/package_table_status.cpp',
  'ui/package_table/package_table_view.cpp',
  'ui/transaction/pending_transaction_apply.cpp',
  'ui/transaction/pending_transaction_controller.cpp',
  'ui/transaction/pending_transaction_request.cpp',
  'ui/transaction/pending_transaction_view.cpp',
  'ui/refresh/repository_refresh_controller.cpp',
  'ui/transaction/transaction_progress.cpp',
  'ui/transaction/transaction_dialogs.cpp',
  'dnf5daemon_client/transaction_service_client_dbus.cpp',
  'dnf5daemon_client/transaction_service_client.cpp',
  'dnf5daemon_client/transaction_service_client_wait.cpp',
  'upgrade/daemon_upgrade_state.cpp',
  'ui/common/ui_helpers.cpp',
  'ui/common/widgets.cpp',
)

dnfui_app = executable(
  'dnfui',
  backend_sources + app_sources,
  include_directories: src_inc,
  dependencies: [
    libdnf5_dep,
    gtk4_dep,
  ],
  install: true,
  install_tag: 'runtime',
)
